--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
       <blockquote id="adviceText" class="text-lightCyan mb-3">
       </blockquote>
 
-      <img class="mb-10" src="images/pattern-divider-desktop.svg" alt="">
+      <img class="mb-10" src="images/pattern-divider-desktop.svg" alt="divider">
 
-      <button
+      <div
         class="circle bg-neonGreen rounded-full w-12 h-12 flex items-center justify-center -bottom-7 absolute hover:shadow-neon cursor-pointer">
-        <img src="images/icon-dice.svg" alt="">
-      </button>
+        <img src="images/icon-dice.svg" alt="dice">
+      </div>
     </div>
   </main>
 
