--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </style>
 </head>
 
-<body class="bg-darkBlue w-full min-h-screen ">
+<body class="bg-darkBlue w-full min-h-screen pd-3">
   <main class="flex items-center justify-center h-screen">
     <div
       class="relative h-64 w-96 bg-darkGrayishBlue rounded-lg shadow-2xl p-5 pb-0 text-center flex items-center justify-center flex-col">
