--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <footer class="text-center">
     <span class="text-neonGreen "> Challenge by</span> <a href="https://www.frontendmentor.io?ref=QdUG-13db"
         target="_blank" class="text-cyan-400" >Frontend Mentor</a>.
-      <span class="text-neonGreen">Coded by</span> <a class="text-cyan-400" href="https://github.com.IryCode">IryCode</a>.
+      <span class="text-neonGreen">Coded by</span> <a class="text-cyan-400" href="https://github.com/IryDev">IryDev</a>.
   </footer>
 </body>
 
